fixed weird footer margin bug on safari

--- a/assets/scss/moran.scss
+++ b/assets/scss/moran.scss
@@ -380,8 +380,8 @@ strong, b {
 ====================================== */
 
 .site-footer {
-    margin-top: 6em;
-    margin-bottom: 4em;
+    padding-top: 6em;
+    padding-bottom: 4em;
     color: $header-color;
     a { color: $header-color; }
     a:hover { color: $scratch-blue; }
